--- a/worker/package.json
+++ b/worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodejs-messaging-work-queue-worker",
-  "version": "3.0.2",
+  "version": "4.0.0",
   "description": "A sample Node.js app that processes requests",
   "license": "Apache-2.0",
   "scripts": {
@@ -10,7 +10,7 @@
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "ci": "npm run lint && npm run coveralls",
     "prepublish": "license-reporter report -s",
-    "openshift": "nodeshift --dockerImage=registry.access.redhat.com/ubi8/nodejs-12",
+    "openshift": "nodeshift --dockerImage=registry.access.redhat.com/ubi8/nodejs-14:latest",
     "postinstall": "license-reporter report -s && license-reporter save -s --xml licenses.xml",
     "start": "node ."
   },
