--- a/worker/package.json
+++ b/worker/package.json
@@ -50,10 +50,12 @@
   "homepage": "https://github.com/nodeshift-starters/nodejs-messaging-work-queue",
   "dependencies": {
     "body-parser": "~1.19.0",
-    "debug": "^4.0.1",
     "express": "~4.17.1",
     "kube-probe": "~0.4.0",
     "license-reporter": "^1.3.0",
+    "pino": "^6.11.2",
+    "pino-debug": "^2.0.0",
+    "pino-pretty": "^4.7.1",
     "rhea": "^1.0.0"
   },
   "devDependencies": {
