--- a/frontend/.openshiftio/application.yaml
+++ b/frontend/.openshiftio/application.yaml
@@ -111,7 +111,7 @@ objects:
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
-              path: /api/health/liveness
+              path: /live
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 60
@@ -122,7 +122,7 @@ objects:
             protocol: TCP
           readinessProbe:
             httpGet:
-              path: /api/health/readiness
+              path: /ready
               port: 8080
               scheme: HTTP
           securityContext:
