--- a/worker/.nodeshift/deployment.yml
+++ b/worker/.nodeshift/deployment.yml
@@ -5,3 +5,15 @@ spec:
         - envFrom:
           - configMapRef:
               name: messaging-service
+          readinessProbe:
+            httpGet:
+              path: /ready
+              port: 8080
+              scheme: HTTP
+          livenessProbe:
+            httpGet:
+              path: /ready
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 30
