--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "pretest": "eslint --ignore-path ../.gitignore .",
     "test": "node -e \"console.log('no tests found.')\"",
-    "prepublish": "license-reporter report -s",
     "openshift": "nodeshift --dockerImage=registry.access.redhat.com/ubi8/nodejs-14",
-    "postinstall": "license-reporter report -s && license-reporter save -s --xml licenses.xml",
     "start": "node ."
   },
   "main": "./bin/www",
@@ -21,8 +19,7 @@
     "app.js",
     "public",
     "bin",
-    "LICENSE",
-    "licenses"
+    "LICENSE"
   ],
   "bugs": {
     "url": "https://github.com/nodeshift-starters/nodejs-messaging-work-queue/issues"
@@ -30,22 +27,16 @@
   "homepage": "https://github.com/nodeshift-starters/nodejs-messaging-work-queue",
   "dependencies": {
     "body-parser": "~1.19.0",
-    "debug": "^4.3.1",
+    "debug": "^4.3.3",
     "express": "~4.17.1",
-    "license-reporter": "^1.4.0",
-    "pino": "^6.13.1",
+    "pino": "^7.5.1",
     "pino-debug": "^2.0.0",
-    "pino-pretty": "^4.7.1",
-    "rhea": "^1.0.0"
+    "pino-pretty": "^7.2.0",
+    "rhea": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "nodeshift": "~8.4.0"
+    "eslint-config-semistandard": "^16.0.0",
+    "nodeshift": "~8.6.0"
   }
 }
