--- a/worker/package.json
+++ b/worker/package.json
@@ -17,6 +17,7 @@
   "files": [
     "package.json",
     "app.js",
+    "tracing.js",
     "bin",
     "LICENSE"
   ],
@@ -25,6 +26,15 @@
   },
   "homepage": "https://github.com/nodeshift-starters/nodejs-messaging-work-queue",
   "dependencies": {
+    "@opentelemetry/api": "^1.2.0",
+    "@opentelemetry/exporter-jaeger": "^1.6.0",
+    "@opentelemetry/instrumentation": "^0.32.0",
+    "@opentelemetry/instrumentation-express": "^0.31.0",
+    "@opentelemetry/instrumentation-http": "^0.32.0",
+    "@opentelemetry/resources": "^1.6.0",
+    "@opentelemetry/sdk-trace-base": "^1.6.0",
+    "@opentelemetry/sdk-trace-node": "^1.6.0",
+    "@opentelemetry/semantic-conventions": "^1.6.0",
     "body-parser": "~1.20.0",
     "debug": "^4.3.4",
     "express": "~4.18.1",
