--- a/service.amqp.yaml
+++ b/service.amqp.yaml
@@ -7,7 +7,7 @@ metadata:
     openshift.io/provider-display-name: Red Hat, Inc.
 items:
 - kind: ImageStream
-  apiVersion: v1
+  apiVersion: image.openshift.io/v1
   metadata:
     name: amq-broker
     annotations:
@@ -102,7 +102,7 @@ items:
     annotations:
       service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
       description: Supports node discovery for mesh formation.
-- apiVersion: v1
+- apiVersion: apps.openshift.io/v1
   kind: DeploymentConfig
   metadata:
     labels:
