--- a/worker/package.json
+++ b/worker/package.json
@@ -7,6 +7,7 @@
     "pretest": "eslint --ignore-path ../.gitignore .",
     "test": "node -e \"console.log('no tests found.')\"",
     "openshift": "nodeshift --dockerImage=registry.access.redhat.com/ubi8/nodejs-16",
+    "openshift:enable:trace": "nodeshift --deploy.env NODE_OPTIONS='--require ./tracing.js' --dockerImage=registry.access.redhat.com/ubi8/nodejs-16",
     "start": "node ."
   },
   "main": "./bin/www",
@@ -17,6 +18,7 @@
   "files": [
     "package.json",
     "app.js",
+    "logger.js",
     "tracing.js",
     "bin",
     "LICENSE"
@@ -36,12 +38,9 @@
     "@opentelemetry/sdk-trace-node": "^1.6.0",
     "@opentelemetry/semantic-conventions": "^1.6.0",
     "body-parser": "~1.20.0",
-    "debug": "^4.3.4",
     "express": "~4.18.1",
     "kube-service-bindings": "^1.0.0",
     "pino": "^8.4.2",
-    "pino-debug": "^2.0.0",
-    "pino-pretty": "^9.1.0",
     "rhea": "^3.0.1"
   },
   "devDependencies": {
